--- a/src/less/zchart.less
+++ b/src/less/zchart.less
@@ -1,11 +1,19 @@
 /**
- *01.
+ *01.common style
  *
 */
 svg {
   font-family: "Microsoft YaHei";
   font-size: 14px;
 }
+rect,circle,path{
+  cursor: pointer;
+}
+line.boldLine,circle{
+  stroke-width: 2px;
+}
+
+
 /**
  *02.坐标轴
  *坐标轴、刻度线
@@ -20,6 +28,8 @@ svg {
 .tips-text {
   font-size: 11px;
 }
+
+
 /**
  *03.折线
  *折线、圆点
@@ -32,6 +42,8 @@ svg {
   fill: #fff;
   stroke-width: 2px;
 }
+
+
 /**
  *04.交互提示框tooltip
  *
@@ -47,13 +59,17 @@ svg {
   border-radius: 5px;
   padding: 7px 10px;
 }
+
+
 /**
  *05.legned
  *
 */
-.legendBox {
-  width: 300px;
-  height: 50px;
-  margin: 5px auto;
-  border: solid 1px red;
+g.legendBox {
+  width: auto;
+  height: auto;
+
+  g.legendGroup{
+
+  }
 }
